--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ header img {
     object-fit: contain;
     left: 50%;
     /* Position the logo's center in the middle of the content area (below the safe area) */
-    top: calc(var(--rabbit-safe-area-inset-top, 20px) + 22px); /* safe_area + half_logo_height */
+    top: 50%;
     transform: translate(-50%, -50%); /* The classic centering trick */
 
     cursor: pointer;
